cbm/internal/cbm/cbm.h


typedef struct {
    const char *name;           
    const char *qualified_name; 
    const char *label;          
    const char *file_path;      
    uint32_t start_line;
    uint32_t end_line;
    const char *signature;     
    const char *return_type;   
    const char *receiver;      
    const char *docstring;     
    const char *parent_class;  
    const char **decorators;   
    const char **base_classes; 
    const char **param_names;  
    const char **param_types;  
    const char **return_types; 
    const char *route_path;    
    const char *route_method;  
    int complexity;            
    int cognitive;             
    int loop_count;            
    int loop_depth;            
    bool is_recursive;         
    int param_count;           
    int max_access_depth;      
    int linear_scan_in_loop;   
    int alloc_in_loop;         
    bool recursion_in_loop;    
    bool unguarded_recursion;  
    int lines;                 
    uint32_t *fingerprint;     
    int fingerprint_k;         
    bool is_exported;
    bool is_abstract;
    bool is_test;
    bool is_entry_point;
    const char *structural_profile; 
    const char *body_tokens;     
    const char *struct_trigrams; 
    uint32_t start_byte; 
    uint32_t end_byte;   
    const char *source;  
    uint32_t source_len; 
    const char *structured_path;
    uint64_t structured_occurrence_count;
    const char *structured_occurrence_sha256;
    uint32_t structured_first_start_byte;
    uint32_t structured_first_end_byte;
    uint32_t structured_last_start_byte;
    uint32_t structured_last_end_byte;
    const char *structured_classification;
    const char *structured_classification_provenance;
} CBMDefinition;
typedef struct {
    const char *expr;    
    const char *value;   
    const char *keyword; 
    int index;           
} CBMCallArg;
typedef enum {
    CBM_REF_EVIDENCE_UNQUALIFIED = 0,
    CBM_REF_EVIDENCE_LOCAL = 1,
    CBM_REF_EVIDENCE_QUALIFIED_PATH = 2,
    CBM_REF_EVIDENCE_MEMBER = 3,
} CBMReferenceEvidence;
typedef struct {
    CBMReferenceEvidence evidence;
    uint32_t reference_start_byte;
    uint32_t reference_end_byte;
    uint32_t binding_start_byte;
    uint32_t binding_end_byte;
    uint32_t scope_start_byte;
    uint32_t scope_end_byte;
    const char *resolved_target_qn; 
} CBMReferenceIdentity;
typedef struct {
    const char *callee_name;            
    const char *enclosing_func_qn;      
    const char *first_string_arg;       
    const char *second_arg_name;        
    CBMCallArg args[CBM_MAX_CALL_ARGS]; 
    int arg_count;                      
    int loop_depth;                     
    int branch_depth;                   
    int start_line;                     
    bool is_method;                     
    const char *preprocess_context_id;  
    CBMReferenceIdentity reference;     
} CBMCall;
typedef enum {
    CBM_IMPORT_RESOLVE_SEMANTIC = 0,
    CBM_IMPORT_RESOLVE_EXACT_SOURCE = 1,
    CBM_IMPORT_RESOLVE_EXTERNAL_SOURCE = 2,
    CBM_IMPORT_RESOLVE_ES_SOURCE = 3,
    CBM_IMPORT_RESOLVE_BROWSER_URL = 4,
    CBM_IMPORT_RESOLVE_RUST_MODULE = 5,
} CBMImportResolution;
typedef enum {
    CBM_IMPORT_BINDING_LOCAL = 0,
    CBM_IMPORT_BINDING_RESOURCE = 1,
    CBM_IMPORT_BINDING_UNBOUND = 2,
} CBMImportBinding;
typedef struct {
    const char *local_name;      
    const char *module_path;     
    const char *resource_kind;   
    const char *dependency_kind; 
    CBMImportResolution resolution;
    CBMImportBinding binding;
} CBMImport;
typedef enum {
    CBM_REF_DOMAIN_SYMBOL = 0,   
    CBM_REF_DOMAIN_VALUE = 1,    
    CBM_REF_DOMAIN_CALLABLE = 2, 
    CBM_REF_DOMAIN_TYPE = 3,     
} CBMReferenceDomain;
typedef struct {
    const char *name;
    const char *enclosing_func_qn;
    uint32_t definition_start_byte;
    uint32_t definition_end_byte;
    uint32_t scope_start_byte;
    uint32_t scope_end_byte;
    CBMReferenceDomain target_domain;
} CBMLocalBinding;
typedef struct {
    const char *ref_name;             
    const char *enclosing_func_qn;    
    int start_line;                   
    CBMReferenceDomain target_domain; 
    CBMReferenceIdentity reference;   
} CBMUsage;
typedef struct {
    const char *exception_name;    
    const char *enclosing_func_qn; 
    int start_line;                
    CBMReferenceIdentity reference;
} CBMThrow;
typedef struct {
    const char *var_name;          
    const char *enclosing_func_qn; 
    int start_line;                
    bool is_write;                 
    CBMReferenceIdentity reference;
} CBMReadWrite;
typedef struct {
    const char *type_name;         
    const char *enclosing_func_qn; 
} CBMTypeRef;
typedef struct {
    const char *env_key;           
    const char *enclosing_func_qn; 
    int start_line;                
} CBMEnvAccess;
typedef struct {
    const char *var_name;          
    const char *type_name;         
    const char *enclosing_func_qn; 
} CBMTypeAssign;
typedef enum {
    CBM_STRREF_URL = 0,    
    CBM_STRREF_CONFIG = 1, 
} CBMStringRefKind;
typedef struct {
    const char *value;             
    const char *enclosing_func_qn; 
    const char *key_path;          
    CBMStringRefKind kind;         
} CBMStringRef;
typedef struct {
    const char *source_name; 
    const char *target_url;  
    const char *broker;      
} CBMInfraBinding;
typedef enum {
    CBM_CHANNEL_EMIT = 0,
    CBM_CHANNEL_LISTEN = 1,
} CBMChannelDirection;
typedef struct {
    const char *channel_name;      
    const char *transport;         
    const char *enclosing_func_qn; 
    int start_line;                
    CBMChannelDirection direction;
} CBMChannel;
typedef struct {
    const char *trait_name;  
    const char *struct_name; 
} CBMImplTrait;
typedef struct {
    const char *caller_qn; 
    const char *callee_qn; 
    const char *strategy;  
    float confidence;      
    const char *reason;    
    const char *preprocess_context_id; 
} CBMResolvedCall;
typedef struct {
    CBMResolvedCall *items;
    int count;
    int cap;
} CBMResolvedCallArray;
typedef struct {
    CBMDefinition *items;
    int count;
    int cap;
} CBMDefArray;
typedef struct {
    CBMCall *items;
    int count;
    int cap;
} CBMCallArray;