crates/cbm-sys/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMCallArg {
    pub expr: *const ::std::os::raw::c_char,
    pub value: *const ::std::os::raw::c_char,
    pub keyword: *const ::std::os::raw::c_char,
    pub index: ::std::os::raw::c_int,
}
impl Default for CBMCallArg {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBMReferenceEvidence_CBM_REF_EVIDENCE_UNQUALIFIED: CBMReferenceEvidence = 0;
pub const CBMReferenceEvidence_CBM_REF_EVIDENCE_LOCAL: CBMReferenceEvidence = 1;
pub const CBMReferenceEvidence_CBM_REF_EVIDENCE_QUALIFIED_PATH: CBMReferenceEvidence = 2;
pub const CBMReferenceEvidence_CBM_REF_EVIDENCE_MEMBER: CBMReferenceEvidence = 3;
pub type CBMReferenceEvidence = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMReferenceIdentity {
    pub evidence: CBMReferenceEvidence,
    pub reference_start_byte: u32,
    pub reference_end_byte: u32,
    pub binding_start_byte: u32,
    pub binding_end_byte: u32,
    pub scope_start_byte: u32,
    pub scope_end_byte: u32,
    pub resolved_target_qn: *const ::std::os::raw::c_char,
}
impl Default for CBMReferenceIdentity {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMCall {
    pub callee_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub first_string_arg: *const ::std::os::raw::c_char,
    pub second_arg_name: *const ::std::os::raw::c_char,
    pub args: [CBMCallArg; 8usize],
    pub arg_count: ::std::os::raw::c_int,
    pub loop_depth: ::std::os::raw::c_int,
    pub branch_depth: ::std::os::raw::c_int,
    pub start_line: ::std::os::raw::c_int,
    pub is_method: bool,
    pub preprocess_context_id: *const ::std::os::raw::c_char,
    pub reference: CBMReferenceIdentity,
}
impl Default for CBMCall {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_SEMANTIC: CBMImportResolution = 0;
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_EXACT_SOURCE: CBMImportResolution = 1;
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_EXTERNAL_SOURCE: CBMImportResolution = 2;
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_ES_SOURCE: CBMImportResolution = 3;
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_BROWSER_URL: CBMImportResolution = 4;
pub const CBMImportResolution_CBM_IMPORT_RESOLVE_RUST_MODULE: CBMImportResolution = 5;
pub type CBMImportResolution = ::std::os::raw::c_int;
pub const CBMImportBinding_CBM_IMPORT_BINDING_LOCAL: CBMImportBinding = 0;
pub const CBMImportBinding_CBM_IMPORT_BINDING_RESOURCE: CBMImportBinding = 1;
pub const CBMImportBinding_CBM_IMPORT_BINDING_UNBOUND: CBMImportBinding = 2;
pub type CBMImportBinding = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMImport {
    pub local_name: *const ::std::os::raw::c_char,
    pub module_path: *const ::std::os::raw::c_char,
    pub resource_kind: *const ::std::os::raw::c_char,
    pub dependency_kind: *const ::std::os::raw::c_char,
    pub resolution: CBMImportResolution,
    pub binding: CBMImportBinding,
}
impl Default for CBMImport {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBMReferenceDomain_CBM_REF_DOMAIN_SYMBOL: CBMReferenceDomain = 0;
pub const CBMReferenceDomain_CBM_REF_DOMAIN_VALUE: CBMReferenceDomain = 1;
pub const CBMReferenceDomain_CBM_REF_DOMAIN_CALLABLE: CBMReferenceDomain = 2;
pub const CBMReferenceDomain_CBM_REF_DOMAIN_TYPE: CBMReferenceDomain = 3;
pub type CBMReferenceDomain = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMLocalBinding {
    pub name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub definition_start_byte: u32,
    pub definition_end_byte: u32,
    pub scope_start_byte: u32,
    pub scope_end_byte: u32,
    pub target_domain: CBMReferenceDomain,
}
impl Default for CBMLocalBinding {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMUsage {
    pub ref_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
    pub target_domain: CBMReferenceDomain,
    pub reference: CBMReferenceIdentity,
}
impl Default for CBMUsage {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMThrow {
    pub exception_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
    pub reference: CBMReferenceIdentity,
}
impl Default for CBMThrow {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMReadWrite {
    pub var_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
    pub is_write: bool,
    pub reference: CBMReferenceIdentity,
}
impl Default for CBMReadWrite {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMTypeRef {
    pub type_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
}
impl Default for CBMTypeRef {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMEnvAccess {
    pub env_key: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
}
impl Default for CBMEnvAccess {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMTypeAssign {
    pub var_name: *const ::std::os::raw::c_char,
    pub type_name: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
}
impl Default for CBMTypeAssign {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBMStringRefKind_CBM_STRREF_URL: CBMStringRefKind = 0;
pub const CBMStringRefKind_CBM_STRREF_CONFIG: CBMStringRefKind = 1;
pub type CBMStringRefKind = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMStringRef {
    pub value: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub key_path: *const ::std::os::raw::c_char,
    pub kind: CBMStringRefKind,
}
impl Default for CBMStringRef {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMInfraBinding {
    pub source_name: *const ::std::os::raw::c_char,
    pub target_url: *const ::std::os::raw::c_char,
    pub broker: *const ::std::os::raw::c_char,
}
impl Default for CBMInfraBinding {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const CBMChannelDirection_CBM_CHANNEL_EMIT: CBMChannelDirection = 0;
pub const CBMChannelDirection_CBM_CHANNEL_LISTEN: CBMChannelDirection = 1;
pub type CBMChannelDirection = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMChannel {
    pub channel_name: *const ::std::os::raw::c_char,
    pub transport: *const ::std::os::raw::c_char,
    pub enclosing_func_qn: *const ::std::os::raw::c_char,
    pub start_line: ::std::os::raw::c_int,
    pub direction: CBMChannelDirection,
}
impl Default for CBMChannel {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMImplTrait {
    pub trait_name: *const ::std::os::raw::c_char,
    pub struct_name: *const ::std::os::raw::c_char,
}
impl Default for CBMImplTrait {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMResolvedCall {
    pub caller_qn: *const ::std::os::raw::c_char,
    pub callee_qn: *const ::std::os::raw::c_char,
    pub strategy: *const ::std::os::raw::c_char,
    pub confidence: f32,
    pub reason: *const ::std::os::raw::c_char,
    pub preprocess_context_id: *const ::std::os::raw::c_char,
}
impl Default for CBMResolvedCall {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMResolvedCallArray {
    pub items: *mut CBMResolvedCall,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMResolvedCallArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMDefArray {
    pub items: *mut CBMDefinition,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMDefArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CBMCallArray {
    pub items: *mut CBMCall,
    pub count: ::std::os::raw::c_int,
    pub cap: ::std::os::raw::c_int,
}
impl Default for CBMCallArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
